[package]
name = "polkadot-rpc"
version = "0.8.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.0.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
