[package]
name = "polkadot-test-runtime"
version = "0.8.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
log = { version = "0.3.9", optional = true }
rustc-hex = { version = "2.0.1", default-features = false }
serde = { version = "1.0.102", default-features = false }
serde_derive = { version = "1.0.102", optional = true }
smallvec = "1.4.1"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
rstd = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }

pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-indices = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-nicks = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }
pallet-vesting = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "andre/remove-finality-tracker" }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
polkadot-parachain = { path = "../../parachain", default-features = false }
polkadot-runtime-parachains = { path = "../parachains", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
libsecp256k1 = "0.3.2"
tiny-keccak = "1.5.0"
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "andre/remove-finality-tracker" }
serde_json = "1.0.41"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"codec/std",
	"inherents/std",
	"sp-core/std",
	"polkadot-parachain/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"rstd/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-nicks/std",
	"pallet-offences/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-timestamp/std",
	"sp-version/std",
	"pallet-vesting/std",
	"serde_derive",
	"serde/std",
	"log",
	"pallet-babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"pallet-randomness-collective-flip/std",
	"runtime-common/std",
]
